fix video not showing in 1on1 call

--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,10 @@ video {
 	height: 100%;
 	overflow: hidden;
 }
+.participants-2 #remotes {
+	position: initial;
+}
+
 .participants-3 .videoContainer,
 .participants-3 .videoView {
 	width: 33%;
